# FactoryPattern

./: .env.example  .gitignore  README.md  pyproject.toml  script.py
app/: __init__.py  db.py  factory.py  main.py  models.py  repository.py
